--- a/index.html
+++ b/index.html
@@ -171,8 +171,18 @@
           </ul>
         </div>
       </div>
+      <footer>
+        <div id="footer">
+          Coded by
+          <a
+            href="https://www.linkedin.com/in/natalia-ivantsova-46017b238/"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Natalia Ivantsova</a
+          >
+        </div>
+      </footer>
     </div>
-
     <script src="src/index.js"></script>
   </body>
 </html>
