--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
             <li class="current-weather-details">
               <img
-                src="images/f-sun.svg"
+                src="images/f-rain2.svg"
                 id="weather-icon"
                 alt="rainy weather"
               />
@@ -147,7 +147,7 @@
                 <div class="col-3">
                   <img
                     class="forecast-icon"
-                    src="images/animated/cloudy-day-1.svg"
+                    src="images/animated/cloudy.svg"
                     alt=""
                   />
                 </div>
@@ -162,7 +162,7 @@
                 <div class="col-2">14/05</div>
                 <div class="col-3">
                   <img
-                    src="images/animated/cloudy-day-3.svg"
+                    src="images/animated/rainy-3.svg"
                     class="forecast-icon"
                     alt=""
                   />
