Add temperature scale f/c

--- a/indexF.html
+++ b/indexF.html
@@ -46,15 +46,14 @@
           >
             <i class="fa-solid fa-magnifying-glass"></i>
           </button>
-
           <button
-            onclick="updateScaleF()"
+            onclick="updateScale()"
             type="button"
-            id="temperature-scale-button buttonC"
+            id="temperature-scale-button buttonF"
             class="plain-border search-bar-button"
-            value="℃"
+            value="℉"
           >
-            ℉
+            ℃
             <!-- <i class="fa-solid fa-location-dot"></i> -->
           </button>
         </form>
@@ -72,8 +71,8 @@
             <div class="col-3" id="current-weather-temperature">
               <br />
               <h2>
-                <span id="temperature">24</span>
-                <span id="scale">℃</span>
+                <span id="temperature">75</span>
+                <span id="scale"> ℉ </span>
               </h2>
             </div>
           </div>
@@ -158,8 +157,8 @@
                     alt=""
                   />
                 </div>
-                <div class="col-2" id="day-temperature">+5℃</div>
-                <div class="col-2" id="night-temperature">+15℃</div>
+                <div class="col-2" id="day-temperature">+41℉</div>
+                <div class="col-2" id="night-temperature">+59℉</div>
               </div>
             </li>
 
@@ -175,8 +174,8 @@
                     alt=""
                   />
                 </div>
-                <div class="col-2" id="day-temperature">+5℃</div>
-                <div class="col-2" id="night-temperature">+15℃</div>
+                <div class="col-2" id="day-temperature">+41℉</div>
+                <div class="col-2" id="night-temperature">+59℉</div>
               </div>
             </li>
 
@@ -192,8 +191,8 @@
                     alt=""
                   />
                 </div>
-                <div class="col-2" id="day-temperature">+5℃</div>
-                <div class="col-2" id="night-temperature">+15℃</div>
+                <div class="col-2" id="day-temperature">+41℉</div>
+                <div class="col-2" id="night-temperature">+59℉</div>
               </div>
             </li>
 
@@ -209,8 +208,8 @@
                     alt=""
                   />
                 </div>
-                <div class="col-2" id="day-temperature">+5℃</div>
-                <div class="col-2" id="night-temperature">+15℃</div>
+                <div class="col-2" id="day-temperature">+41℉</div>
+                <div class="col-2" id="night-temperature">+59℉</div>
               </div>
             </li>
 
@@ -226,8 +225,8 @@
                     class="forecast-icon"
                   />
                 </div>
-                <div class="col-2" id="day-temperature">+5℃</div>
-                <div class="col-2" id="night-temperature">+15℃</div>
+                <div class="col-2" id="day-temperature">+41℉</div>
+                <div class="col-2" id="night-temperature">+59℉</div>
               </div>
             </li>
           </ul>
