--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
             <!-- center part -->
 
-            <li class="current-weather-details">
+            <li class="current-weather-details" id="current-weather-icon">
               <img
                 src="images/rain.svg"
                 id="weather-icon"
